--- a/about.html
+++ b/about.html
@@ -3,7 +3,6 @@ layout: page
 title: About
 permalink: /about/
 ---
+Contact me
 
-### Contact me
-
-[GnarlyWeb@mail.com](mailto:email@domain.com)
+[GnarlyWeb@mail.com](mailto:GnarlyWeb@mail.com)
